<resources>
    <string name="app_name">Trackohol</string>
    <string name="ButtonSober">Sober</string>
    <string name="ButtonTipsy">Tipsy</string>
    <string name="ButtonDrunk">Drunk</string>
    <string name="ButtonWasted">Wasted</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="measure">Measure</string>
    <string name="email">Email ID</string>
    <string name="password">Password</string>
    <string name="password_hint">.......</string>
    <string name="login">Login</string>
    <string name="remember_me">Remember Me</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="leaving_alert">Save your changes or discard item?</string>
    <string name="measurement_title">Measure Alcohol Level</string>
    <string name="select_status">Select current status</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="cancel">Cancel</string>
    <string name="discard">Discard</string>
    <string name="save">Save</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">Sign Up</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string-array name="time_periods">
        <item>Last 24h</item>
        <item>Days</item>
        <item>Weeks</item>
        <item>Months</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
