<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialogBackButton"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hapticFeedbackEnabled="true"
    style="@drawable/alert_dialog"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/leaving_alert"
        android:textSize="16sp" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/cancelTextView"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/back_pressed"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/text_buttton"
            android:textSize="12sp"
            android:textStyle="bold" />


        <View
            android:id="@+id/divider1"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:visibility="visible" />

        <TextView
            android:id="@+id/discardTextView"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/back_pressed"
            android:gravity="center"
            android:text="@string/discard"
            android:textColor="@color/text_buttton"
            android:textSize="12sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="2dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:background="@drawable/boarder"
            android:visibility="visible" />

        <TextView
            android:id="@+id/saveTextView"
            style="@android:style/Widget.Button"
            android:layout_width="fill_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@drawable/back_pressed"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/text_buttton"
            android:textSize="12sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>