<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:id="@+id/login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="18dp"
        android:paddingRight="18dp"
        android:paddingTop="@dimen/fab_margin"
        android:paddingBottom="@dimen/fab_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- Here you can put your logo or brand name -->

            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:src="@drawable/ic_drinks_clinck_white_24db"/>

            <EditText
                android:id="@+id/login_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_person_white_24dp"
                android:drawablePadding="12dp"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/lightorange"
                android:textColor="@color/lightorange"
                android:textSize="14sp"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:drawablePadding="12dp"
                android:padding="8dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/lightorange"
                android:maxLines="1"
                android:background="@android:color/transparent"
                android:layout_marginTop="4dp"
                android:drawableLeft="@drawable/ic_lock_white_24dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#f9d7db" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingBottom="5dp"
                android:paddingTop="8dp" >
                <CheckBox
                    android:id="@+id/show_hide_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="?android:attr/listChoiceIndicatorSingle"
                    android:text="@string/show_pwd"
                    android:textColor="@color/lightorange"
                    android:textSize="14sp" />

            </LinearLayout>

            <Button
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_login"
                android:text="@string/login"
                android:textColor="#f16f7d"
                android:textAllCaps="false"
                android:padding="16dp"
                android:clickable="true"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_marginTop="15dp"
                android:textSize="18sp"/>

            <Button
                android:id="@+id/createAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_signup"
                android:text="@string/signUp"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:textColor="@color/lightorange"
                android:textAllCaps="false"
                android:textSize="18sp"
                android:layout_marginTop="16dp"
                android:clickable="true"
                android:padding="16dp"/>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>